# factoryboy_autonow

./: pyproject.toml
project/config/: settings.py
project/orders/: models.py
project/orders/migrations/: 0001_initial.py
project/orders/tests/: factories.py  test_models.py
